[tool.poetry]
name = "gate-nambaone"
version = "0.1.0"
description = "Namba One payment gateway integration"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
httpx = "^0.27.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.4"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-httpx = "^0.30.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["I", "E", "F", "UP", "B"]

[tool.ruff.lint.isort]
force-single-line = true